Finalisation projet complet

--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
   <div class="loader">
     <div class="defilement">
       <div class="logo1" >
-        <img src="./public/logo/Chef_test.png" alt="Présenation Ohmyfood">
-  </div>
-    <p>Plus de perte de temps, Composer, Commander votre menu gastronomique en ligne avec</p>
-    <img src="./public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
-  
-  </div>
-
+        <img src="./public/logo/Chef_Test_3.svg" alt="Présenation Ohmyfood">
+        <p class="slogan1">Fini le temps d'attente, commander votre menu gastronomique en ligne</p>
+      </div>
+    </div>
   </div>
   <!--logo-->
   <header>
@@ -77,11 +74,11 @@
       </ul>
     </section>
     <!-- Section Restaurants -->
-    <section class=menus>
+    <section>
       <div class="menus_restaurant">
         <h2>Restaurants</h2>
         <div class="menus__cartes">
-        <div class="card">
+          <div class="card">
           <div class="btn__card">
             <span class="new"> Nouveau </span>
           </div>
@@ -97,9 +94,9 @@
               <p>Ménilmontant</p>
             </figcaption>
           </figure>
-        </div>
+          </div>
 
-        <div class="card">
+          <div class="card">
           <div class="btn__card">
             <span class="new"> Nouveau </span>
           </div>
@@ -116,9 +113,9 @@
               <p>Charonne</p>
             </figcaption>
           </figure>
-        </div>
+          </div>
 
-        <div class="card">
+          <div class="card">
           <div class="btn__card"></div>
           <figure>
             <a href="./public/pages/menu3.html">
@@ -132,9 +129,9 @@
               <p>Cité Rouge</p>
             </figcaption>
           </figure>
-        </div>
+          </div>
 
-        <div class="card">
+          <div class="card">
           <div class="btn__card"></div>
           <figure>
             <a href="./public/pages/menu4.html">
