--- a/public/pages/menu2.html
+++ b/public/pages/menu2.html
@@ -31,22 +31,21 @@
           <img src="../images/menu2.jpg" alt="menu La note enchantée" title="ohmyfood menu La note enchantée">
       </div>
     <div class="main__menu">
-        <div class="menu__title">
+        <div class="menus__title">
             <h2>La note enchantée</h2>
                 <span><i class="heart far fa-heart"></i></span>
         </div>
         <div class="full__menu">
             <!-- Entrées -->
-            <div class="starter">
-                <div class="starter__title">
-                    <h4>Entrées</h4>
-                    <div class="line"></div>
+            <div class="menu">
+                <div class="menu__title">
+                    <h4>Entrées</h4>    
                 </div>
                 <div class="meals">
                     <h3>Ravioles de foie gras</h3>
                     <div class="last__line">
                         <p>Accompagnés de leur crème à la truffe</p>
-                        <span><strong>25€</strong></span>
+                        <span class="num">25€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -56,7 +55,7 @@
                     <h3>Caviar osciètre</h3>
                     <div class="last__line">
                         <p>Sur blini à la farine de blé noir</p>
-                        <span><strong>35€</strong></span>
+                        <span class="num">35€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -66,7 +65,7 @@
                     <h3>Homard et espuma de potiron</h3>
                     <div class="last__line">
                         <p>Mariné aux zestes d'orange</p>
-                        <span><strong>20€</strong></span>
+                        <span class="num">20€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -76,7 +75,7 @@
                     <h3>Foie gras de canard cuit entier</h3>
                     <div class="last__line">
                         <p>Confiture de figue et pain toasté</p>
-                        <span><strong>35€</strong></span>
+                        <span class="num">35€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -85,16 +84,15 @@
             </div>
   
             <!-- Plats principaux -->
-            <div class="dish">
-                <div class="dish__title">
+            <div class="menu">
+                <div class="menu__title">
                     <h4>Plats</h4>
-                    <div class="line"></div>
                 </div>
                 <div class="meals">
                     <h3>Noix de coquilles Saint-Jacques</h3>
                     <div class="last__line">
                         <p>Sur lit de purée de céleri-rave</p>
-                        <span><strong>40€</strong></span>
+                        <span class="num">40€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -104,7 +102,7 @@
                     <h3>Langoustine poêlée</h3>
                     <div class="last__line">
                         <p>Purée de patate douce</p>
-                        <span><strong>35€</strong></span>
+                        <span class="num">35€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -114,7 +112,7 @@
                     <h3>Mijoté de queue de boeuf</h3>
                     <div class="last__line">
                         <p>Et riz sauvage aux zestes de citron</p>
-                        <span><strong>44€</strong></span>
+                        <span class="num">44€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -123,16 +121,15 @@
             </div>
   
             <!-- Desserts -->
-            <div class="dessert">
-                <div class="dessert__title">
+            <div class="menu">
+                <div class="menu__title">
                     <h4>Desserts</h4>
-                    <div class="line"></div>
                 </div>
                 <div class="meals">
                     <h3>Macaron noisette et chocolat</h3>
                     <div class="last__line">
                         <p>Glace au caramel brun et sel de Guérande</p>
-                        <span><strong>18€</strong></span>
+                        <span class="num">18€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -142,7 +139,7 @@
                     <h3>Baba au rhum revisité</h3>
                     <div class="last__line">
                         <p>Avec son coulis de citron</p>
-                        <span><strong>22€</strong></span>
+                        <span class="num">22€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -152,7 +149,7 @@
                     <h3>Tarte au citron meringuée</h3>
                     <div class="last__line">
                         <p>Déstructurée</p>
-                        <span><strong>23€</strong></span>
+                        <span class="num">23€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
