--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -33,16 +33,15 @@
         <img src="../images/menu1.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
     </div>
   <div class="main__menu">
-      <div class="menu__title">
+      <div class="menus__title">
           <h2>La palette du goût</h2>
               <span><i class="heart far fa-heart"></i></span>
       </div>
       <div class="full__menu">
           <!-- Entrées -->
-          <div class="starter">
-              <div class="starter__title">
+          <div class="menu">
+              <div class="menu__title">
                   <h4>Entrées</h4>
-                  <div class="line"></div>
               </div>
               <div class="meals">
                   <h3>Fricassée d'escargot</h3>
@@ -77,10 +76,9 @@
           </div>
 
           <!-- Plats principaux -->
-          <div class="dish">
-              <div class="dish__title">
+          <div class="menu">
+              <div class="menu__title">
                   <h4>Plats</h4>
-                  <div class="line"></div>
               </div>
               <div class="meals">
                   <h3>Filet de boeuf aux herbes</h3>
@@ -115,10 +113,9 @@
           </div>
 
           <!-- Desserts -->
-          <div class="dessert">
-              <div class="dessert__title">
+          <div class="menu">
+              <div class="menu__title">
                   <h4>Desserts</h4>
-                  <div class="line"></div>
               </div>
               <div class="meals">
                   <h3>Paris-Brest</h3>
