--- a/public/pages/menu3.html
+++ b/public/pages/menu3.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>      
-        <a href="../../index.html>
+        <a href="../../index.html">
             <i class="fas fa-arrow-left"></i>
             </a>      
            <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Ohmyfood">      
@@ -31,22 +31,21 @@
           <img src="../images/menu3.jpg" alt="menu À la française" title="ohmyfood menu À la française">
       </div>
     <div class="main__menu">
-        <div class="menu__title">
+        <div class="menus__title">
             <h2>À la française</h2>
                 <span><i class="heart far fa-heart"></i></span>
         </div>
         <div class="full__menu">
             <!-- Entrées -->
-            <div class="starter">
-                <div class="starter__title">
-                    <h4>Entrées</h4>
-                    <div class="line"></div>
+            <div class="menu">
+                <div class="menu__title">
+                    <h4>Entrées</h4>  
                 </div>
                 <div class="meals">
                     <h3>Tartare de poulpe acidulé</h3>
                     <div class="last__line">
                         <p>Aux zestes d'orange</p>
-                        <span><strong>25€</strong></span>
+                        <span class="num">25€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -56,7 +55,7 @@
                     <h3>Velouté de légumes d'antan</h3>
                     <div class="last__line">
                         <p>Carotte, panais, topinambour</p>
-                        <span><strong>35€</strong></span>
+                        <span class="num">35€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -66,7 +65,7 @@
                     <h3>Soupe à l'oignon</h3>
                     <div class="last__line">
                         <p>Revisitée</p>
-                        <span><strong>20€</strong></span>
+                        <span class="num">20€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -75,16 +74,15 @@
             </div>
   
             <!-- Plats principaux -->
-            <div class="dish">
-                <div class="dish__title">
-                    <h4>Plats</h4>
-                    <div class="line"></div>
+            <div class="menu">
+                <div class="menu__title">
+                    <h4>Plats</h4>     
                 </div>
                 <div class="meals">
                     <h3>Coquilles Saint-Jacques</h3>
                     <div class="last__line">
                         <p>Accompagnées d'une purée de panais</p>
-                        <span><strong>40€</strong></span>
+                        <span class="num">40€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -94,7 +92,7 @@
                     <h3>Magret de canard</h3>
                     <div class="last__line">
                         <p>Et parmentier de pommes de terre</p>
-                        <span><strong>35€</strong></span>
+                        <span class="num">35€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -104,7 +102,7 @@
                     <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                     <div class="last__line">
                         <p>Sur son lit de gnocchis aux légumes</p>
-                        <span><strong>44€</strong></span>
+                        <span class="num">44€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -113,16 +111,16 @@
             </div>
   
             <!-- Desserts -->
-            <div class="dessert">
-                <div class="dessert__title">
+            <div class="menu">
+                <div class="menu__title">
                     <h4>Desserts</h4>
-                    <div class="line"></div>
+
                 </div>
                 <div class="meals">
                     <h3>Pétales de violettes glacés</h3>
                     <div class="last__line">
                         <p>Et purée de noisettes</p>
-                        <span><strong>18€</strong></span>
+                        <span class="num">18€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -132,7 +130,7 @@
                     <h3>Fondant au chocolat</h3>
                     <div class="last__line">
                         <p>Revisité</p>
-                        <span><strong>22€</strong></span>
+                        <span class="num">22€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -142,7 +140,7 @@
                     <h3>Millefeuille croustillant</h3>
                     <div class="last__line">
                         <p>Myrtilles et pâte d’amande</p>
-                        <span><strong>23€</strong></span>
+                        <span class="num">23€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
