--- a/public/pages/menu4.html
+++ b/public/pages/menu4.html
@@ -31,22 +31,21 @@
           <img src="../images/menu4.jpg" alt="menu Le délice des sens" title="ohmyfood menu Le délice des sens">
       </div>
     <div class="main__menu">
-        <div class="menu__title">
+        <div class="menus__title">
             <h2>Le délice des sens</h2>
                 <span><i class="heart far fa-heart"></i></span>
         </div>
         <div class="full__menu">
             <!-- Entrées -->
-            <div class="starter">
-                <div class="starter__title">
+            <div class="menu">
+                <div class="menu__title">
                     <h4>Entrées</h4>
-                    <div class="line"></div>
                 </div>
                 <div class="meals">
                     <h3>Tartare de thon</h3>
                     <div class="last__line">
                         <p>Assaisonné au yuzu</p>
-                        <span><strong>25€</strong></span>
+                        <span class="num">25€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -56,7 +55,7 @@
                     <h3>Bouchée de homard croustillant</h3>
                     <div class="last__line">
                         <p>Et sa farandole de petits légumes</p>
-                        <span><strong>35€</strong></span>
+                        <span class="num">35€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -66,7 +65,7 @@
                     <h3>Velouté de cèpes</h3>
                     <div class="last__line">
                         <p>Aux truffes</p>
-                        <span><strong>20€</strong></span>
+                        <span class="num">20€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -75,16 +74,15 @@
             </div>
   
             <!-- Plats principaux -->
-            <div class="dish">
-                <div class="dish__title">
+            <div class="menu">
+                <div class="menu__title">
                     <h4>Plats</h4>
-                    <div class="line"></div>
                 </div>
                 <div class="meals">
                     <h3>Poulet rôti aux herbes de Provence</h3>
                     <div class="last__line">
                         <p>Et sa crème de truffe</p>
-                        <span><strong>40€</strong></span>
+                        <span class="num">40€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -94,7 +92,7 @@
                     <h3>Langouste rôtie</h3>
                     <div class="last__line">
                         <p>Et ses légumes de saison</p>
-                        <span><strong>35€</strong></span>
+                        <span class="num">35€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -104,7 +102,7 @@
                     <h3>Côte de boeuf Angus</h3>
                     <div class="last__line">
                         <p>Et sa purée de panais</p>
-                        <span><strong>44€</strong></span>
+                        <span class="num">44€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -113,16 +111,15 @@
             </div>
   
             <!-- Desserts -->
-            <div class="dessert">
-                <div class="dessert__title">
+            <div class="menu">
+                <div class="menu__title">
                     <h4>Desserts</h4>
-                    <div class="line"></div>
                 </div>
                 <div class="meals">
                     <h3>Farandole de desserts</h3>
                     <div class="last__line">
                         <p>Du chef</p>
-                        <span><strong>18€</strong></span>
+                        <span class="num">18€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -132,7 +129,7 @@
                     <h3>Crème brulée</h3>
                     <div class="last__line">
                         <p>Revisitée</p>
-                        <span><strong>22€</strong></span>
+                        <span class="num">22€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
@@ -142,7 +139,7 @@
                     <h3>Tiramisu</h3>
                     <div class="last__line">
                         <p>À la noisette</p>
-                        <span><strong>23€</strong></span>
+                        <span class="num">23€</span>
                     </div>
                     <div class="cross">
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
