--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </span>
       </div>
     </section>
-
+<!--Action Fonctionnement-->
     <section class="action">
       <h2>Fonctionnement</h2>
       <ul class="action__item">
