Finalisation projet3 indentation

--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -2,170 +2,170 @@
 <html lang="fr">
 
 <head>
-  <!--Information régles du site-->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale= 1">
-  <link rel="stylesheet" href="../css/style.css">
-  <title>Ohmyfood-MobileFirst</title>
-  <meta name="description" content="Entreprise de commande de repas en ligne">
-  <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
-  <!-- Google Fonts-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-  <!-- Font Awesome-->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <!--Information régles du site-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale= 1">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Ohmyfood-MobileFirst</title>
+    <meta name="description" content="Entreprise de commande de repas en ligne">
+    <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
+    <!-- Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <!-- Font Awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
-<!--Hearder avec retour page index-->
-  <header>
-    <a href="../../index.html">
-      <i class="fas fa-arrow-left"></i>
-    </a>
-    <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
-  </header>
-  <!--Main menu1 La palette du goût-->
-  <main class="main">
-    <div class="header__img">
-        <img src="../images/menu1.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
-    </div>
-  <div class="main__menu">
-      <div class="menus__title">
-          <h2>La palette du goût</h2>
-              <span><i class="heart far fa-heart"></i></span>
-      </div>
-      <div class="full__menu">
-          <!-- Entrées -->
-          <div class="menu">
-              <div class="menu__title">
-                  <h4>Entrées</h4>
-              </div>
-              <div class="meals">
-                  <h3>Fricassée d'escargot</h3>
-                  <div class="last__line">
-                      <p>Au piment d'espelette</p>
-                      <span class="num">25€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-              <div class="meals">
-                  <h3>Foie gras de canard mi-cuit</h3>
-                  <div class="last__line">
-                      <p>Et ses copeaux de truffe noire</p>
-                      <span class="num">35€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-              <div class="meals">
-                  <h3>Oeuf au plat</h3>
-                  <div class="last__line">
-                      <p>Assaisonné à la truffe sur lit de caviar</p>
-                      <span class="num">20€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-          </div>
+    <!--Hearder avec retour page index-->
+    <header>
+        <a href="../../index.html">
+            <i class="fas fa-arrow-left"></i>
+        </a>
+        <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+    </header>
+    <!--Main menu1 La palette du goût-->
+    <main class="main">
+        <div class="header__img">
+            <img src="../images/menu1.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
+        </div>
+        <div class="main__menu">
+            <div class="menus__title">
+                <h2>La palette du goût</h2>
+                <span><i class="heart far fa-heart"></i></span>
+            </div>
+            <div class="full__menu">
+                <!-- Entrées -->
+                <div class="menu entree">
+                    <div class="menu__title">
+                        <h4>Entrées</h4>
+                    </div>
+                    <div class="meals">
+                        <h3>Fricassée d'escargot</h3>
+                        <div class="last__line">
+                            <p>Au piment d'espelette</p>
+                            <span class="num">25€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                    <div class="meals">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <div class="last__line">
+                            <p>Et ses copeaux de truffe noire</p>
+                            <span class="num">35€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                    <div class="meals">
+                        <h3>Oeuf au plat</h3>
+                        <div class="last__line">
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <span class="num">20€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                </div>
 
-          <!-- Plats principaux -->
-          <div class="menu">
-              <div class="menu__title">
-                  <h4>Plats</h4>
-              </div>
-              <div class="meals">
-                  <h3>Filet de boeuf aux herbes</h3>
-                  <div class="last__line">
-                      <p>Accompagné de sa ribambelle de légumes</p>
-                      <span class="num">40€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-              <div class="meals">
-                  <h3>Parmentier de queue de boeuf</h3>
-                  <div class="last__line">
-                      <p>À la truffe noire sur sa purée de panais</p>
-                      <span class="num">35€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-              <div class="meals">
-                  <h3>Filet de turbot</h3>
-                  <div class="last__line">
-                      <p>Aux agrumes</p>
-                      <span class="num">44€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-          </div>
+                <!-- Plats principaux -->
+                <div class="menu plats">
+                    <div class="menu__title">
+                        <h4>Plats</h4>
+                    </div>
+                    <div class="meals">
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <div class="last__line">
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <span class="num">40€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                    <div class="meals">
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <div class="last__line">
+                            <p>À la truffe noire sur sa purée de panais</p>
+                            <span class="num">35€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                    <div class="meals">
+                        <h3>Filet de turbot</h3>
+                        <div class="last__line">
+                            <p>Aux agrumes</p>
+                            <span class="num">44€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                </div>
 
-          <!-- Desserts -->
-          <div class="menu">
-              <div class="menu__title">
-                  <h4>Desserts</h4>
-              </div>
-              <div class="meals">
-                  <h3>Paris-Brest</h3>
-                  <div class="last__line">
-                      <p>Revisité</p>
-                      <span class="num">18€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-              <div class="meals">
-                  <h3>Macaron au chocolat d'exception</h3>
-                  <div class="last__line">
-                      <p>Et glace à la vanille de Madagascar</p>
-                      <span class="num">22€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-              <div class="meals">
-                  <h3>Mousse au chocolat</h3>
-                  <div class="last__line">
-                      <p>Au piment d'Espelette et à la truffe noire</p>
-                      <span class="num">23€</span>
-                  </div>
-                  <div class="cross">
-                      <span><i class="fas fa-check-circle fa-2x"></i></span>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-  <div>
-      <span class="btn__order">
-          <button> Commander </button>
-      </span>
-  </div>
-  </main>
+                <!-- Desserts -->
+                <div class="menu dessert">
+                    <div class="menu__title">
+                        <h4>Desserts</h4>
+                    </div>
+                    <div class="meals">
+                        <h3>Paris-Brest</h3>
+                        <div class="last__line">
+                            <p>Revisité</p>
+                            <span class="num">18€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                    <div class="meals">
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <div class="last__line">
+                            <p>Et glace à la vanille de Madagascar</p>
+                            <span class="num">22€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                    <div class="meals">
+                        <h3>Mousse au chocolat</h3>
+                        <div class="last__line">
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <span class="num">23€</span>
+                        </div>
+                        <div class="cross">
+                            <span><i class="fas fa-check-circle fa-2x"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <span class="btn__order">
+                <button> Commander </button>
+            </span>
+        </div>
+    </main>
 
-  <footer>
-    <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Restaurant">
-    <ul>
-      <li><a href="#"><i class="fas fa-utensils margin_sup"></i>Proposer un restaurant</a></li>
-      <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-      <li><a href="#">Mentions légales</a></li>
-      <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-    </ul>
-  </footer>
+    <footer>
+        <img class="logo" src="../logo/ohmyfood@2x.svg" alt="logo Restaurant">
+        <ul>
+            <li><a href="#"><i class="fas fa-utensils margin_sup"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
