--- a/public/pages/menu3.html
+++ b/public/pages/menu3.html
@@ -37,7 +37,7 @@
             </div>
             <div class="full__menu">
                 <!-- Entrées -->
-                <div class="menu">
+                <div class="menu entree">
                     <div class="menu__title">
                         <h4>Entrées</h4>
                     </div>
@@ -74,7 +74,7 @@
                 </div>
 
                 <!-- Plats principaux -->
-                <div class="menu">
+                <div class="menu plats">
                     <div class="menu__title">
                         <h4>Plats</h4>
                     </div>
@@ -111,7 +111,7 @@
                 </div>
 
                 <!-- Desserts -->
-                <div class="menu">
+                <div class="menu dessert">
                     <div class="menu__title">
                         <h4>Desserts</h4>
 
