--- a/index.html
+++ b/index.html
@@ -2,164 +2,163 @@
 <html lang="fr">
 
 <head>
-  <!--Information régles du site-->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale= 1">
-  <link rel="stylesheet" href="./public/css/style.css">
-  <title>Ohmyfood-MobileFirst</title>
-  <meta name="description" content="Entreprise de commande de repas en ligne">
-  <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
-  <!-- Google Fonts-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-  <!-- Font Awesome-->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <!--Information régles du site-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale= 1">
+    <link rel="stylesheet" href="./public/css/style.css">
+    <title>Ohmyfood-MobileFirst</title>
+    <meta name="description" content="Entreprise de commande de repas en ligne">
+    <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
+    <!-- Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <!-- Font Awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
-  <!--loading spinner-->
-  <div class="loader">
-    <div class="defilement">
-      <div class="logo1">
-        <img src="./public/logo/Chef_Test_3.svg" alt="Présenation Ohmyfood">
-        <p class="slogan1">Fini le temps d'attente, commander votre menu gastronomique en ligne</p>
-      </div>
+    <!--loading spinner-->
+    <div class="loader">
+        <div class="logo1">
+            <img src="./public/logo/Chef_Test_3.svg" alt="Présenation Ohmyfood">
+        </div>
+        <div>
+            <p class="slogan1">Fini le temps d'attente, commander votre menu gastronomique en ligne</p>
+        </div>
     </div>
-  </div>
-  <!--logo-->
-  <header>
-    <img class="logo" src="./public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
-  </header>
+    <!--logo-->
+    <header>
+        <img class="logo" src="./public/logo/ohmyfood@2x.svg" alt="logo Ohmyfood">
+    </header>
 
-  <main>
-    <section class="accueil">
-      <div class="maps">
-        <span>
+    <main>
+        <section class="accueil">
+            <div class="maps">
+                <span>
           <i class="fas fa-map-marker-alt maps__icon"></i>
         </span>
-        <span class="maps__search">
+                <span class="maps__search">
           <input type="search" name="city" value=" Paris, Belleville" placeholder="Votre ville">
         </span>
-      </div>
-      <div class="slogan">
-        <h1>Réservez le menu qui vous convient</h1>
-        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-        <span>
+            </div>
+            <div class="slogan">
+                <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+                <span>
           <button class="slogan__btn">Explorer nos restaurants</button>
         </span>
-      </div>
-    </section>
-    <!--Action Fonctionnement-->
-    <section class="action">
-      <h2>Fonctionnement</h2>
-      <ul class="action__item">
-        <li>
-          <div class="action__number">1</div>
-          <div class="action__icon"><i class="fas fa-mobile-alt fa-lg"></i></div>
-          <p>Choisissez un restaurant</p>
-        </li>
-        <li>
-          <div class="action__number">2</div>
-          <div class="action__icon"><i class="fas fa-list"></i></div>
-          <p>Composez votre menu</p>
-        </li>
-        <li>
-          <div class="action__number">3</div>
-          <div class="action__icon"><i class="fas fa-store"></i></div>
-          <p>Dégustez au restaurant</p>
-        </li>
-      </ul>
-    </section>
-    <!-- Section Restaurants -->
-    <section>
-      <div class="menus_restaurant">
-        <h2>Restaurants</h2>
-        <div class="menus__cartes">
-          <div class="card">
-            <div class="btn__card">
-              <span class="new"> Nouveau </span>
             </div>
-            <figure>
-              <a href="./public/pages/menu1.html">
-                <img src="./public/images/menu1.jpg" alt="palette du goût">
-              </a>
-              <figcaption>
-                <div class="carte">
-                  <h3>La palette du goût</h3>
-                  <span><i class="heart far fa-heart "></i></span>
-                </div>
-                <p>Ménilmontant</p>
-              </figcaption>
-            </figure>
-          </div>
+        </section>
+        <!--Action Fonctionnement-->
+        <section class="action">
+            <h2>Fonctionnement</h2>
+            <ul class="action__item">
+                <li>
+                    <div class="action__number">1</div>
+                    <div class="action__icon"><i class="fas fa-mobile-alt fa-lg"></i></div>
+                    <p>Choisissez un restaurant</p>
+                </li>
+                <li>
+                    <div class="action__number">2</div>
+                    <div class="action__icon"><i class="fas fa-list"></i></div>
+                    <p>Composez votre menu</p>
+                </li>
+                <li>
+                    <div class="action__number">3</div>
+                    <div class="action__icon"><i class="fas fa-store"></i></div>
+                    <p>Dégustez au restaurant</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Section Restaurants -->
+        <section>
+            <div class="menus_restaurant">
+                <h2>Restaurants</h2>
+                <div class="menus__cartes">
+                    <div class="card">
+                        <div class="btn__card">
+                            <span class="new"> Nouveau </span>
+                        </div>
+                        <figure>
+                            <a href="./public/pages/menu1.html">
+                                <img src="./public/images/menu1.jpg" alt="palette du goût">
+                            </a>
+                            <figcaption>
+                                <div class="carte">
+                                    <h3>La palette du goût</h3>
+                                    <span><i class="heart far fa-heart "></i></span>
+                                </div>
+                                <p>Ménilmontant</p>
+                            </figcaption>
+                        </figure>
+                    </div>
 
-          <div class="card">
-            <div class="btn__card">
-              <span class="new"> Nouveau </span>
-            </div>
-            <figure>
-              <a href="./public/pages/menu2.html">
-                <img src="./public/images/menu2.jpg" alt="la note enchantée">
-              </a>
-              <figcaption>
-                <div class="carte">
-                  <h3>La note enchantée</h3>
-                  <span>
+                    <div class="card">
+                        <div class="btn__card">
+                            <span class="new"> Nouveau </span>
+                        </div>
+                        <figure>
+                            <a href="./public/pages/menu2.html">
+                                <img src="./public/images/menu2.jpg" alt="la note enchantée">
+                            </a>
+                            <figcaption>
+                                <div class="carte">
+                                    <h3>La note enchantée</h3>
+                                    <span>
                     <i class="heart far fa-heart"></i></span>
-                </div>
-                <p>Charonne</p>
-              </figcaption>
-            </figure>
-          </div>
+                                </div>
+                                <p>Charonne</p>
+                            </figcaption>
+                        </figure>
+                    </div>
 
-          <div class="card">
-            <div class="btn__card"></div>
-            <figure>
-              <a href="./public/pages/menu3.html">
-                <img src="./public/images/menu3.jpg" alt="à la française">
-              </a>
-              <figcaption>
-                <div class="carte">
-                  <h3>A la française</h3>
-                  <span><i class="heart far fa-heart"></i></span>
-                </div>
-                <p>Cité Rouge</p>
-              </figcaption>
-            </figure>
-          </div>
+                    <div class="card">
+                        <div class="btn__card"></div>
+                        <figure>
+                            <a href="./public/pages/menu3.html">
+                                <img src="./public/images/menu3.jpg" alt="à la française">
+                            </a>
+                            <figcaption>
+                                <div class="carte">
+                                    <h3>A la française</h3>
+                                    <span><i class="heart far fa-heart"></i></span>
+                                </div>
+                                <p>Cité Rouge</p>
+                            </figcaption>
+                        </figure>
+                    </div>
 
-          <div class="card">
-            <div class="btn__card"></div>
-            <figure>
-              <a href="./public/pages/menu4.html">
-                <img src="./public/images/menu4.jpg" alt="le délice des sens">
-              </a>
-              <figcaption>
-                <div class="carte">
-                  <h3>Le délice des sens</h3>
-                  <span><i class="heart far fa-heart"></i></span>
+                    <div class="card">
+                        <div class="btn__card"></div>
+                        <figure>
+                            <a href="./public/pages/menu4.html">
+                                <img src="./public/images/menu4.jpg" alt="le délice des sens">
+                            </a>
+                            <figcaption>
+                                <div class="carte">
+                                    <h3>Le délice des sens</h3>
+                                    <span><i class="heart far fa-heart"></i></span>
+                                </div>
+                                <p>Folie-Méricourt</p>
+                            </figcaption>
+                        </figure>
+                    </div>
                 </div>
-                <p>Folie-Méricourt</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
+            </div>
+        </section>
+    </main>
 
-  <footer>
-    <img class="logo" src="./public/logo/ohmyfood@2x.svg" alt="logo Restaurant">
-    <ul>
-      <li><a href="#"><i class="fas fa-utensils margin_sup"></i>Proposer un restaurant</a></li>
-      <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-      <li><a href="#">Mentions légales</a></li>
-      <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-    </ul>
-  </footer>
+    <footer>
+        <img class="logo" src="./public/logo/ohmyfood@2x.svg" alt="logo Restaurant">
+        <ul>
+            <li><a href="#"><i class="fas fa-utensils margin_sup"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
