finalisation du site
loader spinner
apparition plats

--- a/public/pages/menu1.html
+++ b/public/pages/menu1.html
@@ -15,8 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -41,10 +40,10 @@
                 <!-- Entrées -->
                 <div class="menu entree">
                     <div class="menu__title">
-                        <h4>Entrées</h4>
+                        <h3>Entrées</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Fricassée d'escargot</h3>
+                    <div class="meals delay1">
+                        <h4>Fricassée d'escargot</h4>
                         <div class="last__line">
                             <p>Au piment d'espelette</p>
                             <span class="num">25€</span>
@@ -53,8 +52,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Foie gras de canard mi-cuit</h3>
+                    <div class="meals delay2">
+                        <h4>Foie gras de canard mi-cuit</h4>
                         <div class="last__line">
                             <p>Et ses copeaux de truffe noire</p>
                             <span class="num">35€</span>
@@ -63,8 +62,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Oeuf au plat</h3>
+                    <div class="meals delay3">
+                        <h4>Oeuf au plat</h4>
                         <div class="last__line">
                             <p>Assaisonné à la truffe sur lit de caviar</p>
                             <span class="num">20€</span>
@@ -78,10 +77,10 @@
                 <!-- Plats principaux -->
                 <div class="menu plats">
                     <div class="menu__title">
-                        <h4>Plats</h4>
+                        <h3>Plats</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Filet de boeuf aux herbes</h3>
+                    <div class="meals delay1">
+                        <h4>Filet de boeuf aux herbes</h4>
                         <div class="last__line">
                             <p>Accompagné de sa ribambelle de légumes</p>
                             <span class="num">40€</span>
@@ -90,8 +89,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Parmentier de queue de boeuf</h3>
+                    <div class="meals delay2">
+                        <h4>Parmentier de queue de boeuf</h4>
                         <div class="last__line">
                             <p>À la truffe noire sur sa purée de panais</p>
                             <span class="num">35€</span>
@@ -100,8 +99,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Filet de turbot</h3>
+                    <div class="meals delay3">
+                        <h4>Filet de turbot</h4>
                         <div class="last__line">
                             <p>Aux agrumes</p>
                             <span class="num">44€</span>
@@ -115,10 +114,10 @@
                 <!-- Desserts -->
                 <div class="menu dessert">
                     <div class="menu__title">
-                        <h4>Desserts</h4>
+                        <h3>Desserts</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Paris-Brest</h3>
+                    <div class="meals delay1">
+                        <h4>Paris-Brest</h4>
                         <div class="last__line">
                             <p>Revisité</p>
                             <span class="num">18€</span>
@@ -127,8 +126,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Macaron au chocolat d'exception</h3>
+                    <div class="meals delay2">
+                        <h4>Macaron au chocolat d'exception</h4>
                         <div class="last__line">
                             <p>Et glace à la vanille de Madagascar</p>
                             <span class="num">22€</span>
@@ -137,8 +136,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Mousse au chocolat</h3>
+                    <div class="meals delay3">
+                        <h4>Mousse au chocolat</h4>
                         <div class="last__line">
                             <p>Au piment d'Espelette et à la truffe noire</p>
                             <span class="num">23€</span>
