--- a/public/pages/menu3.html
+++ b/public/pages/menu3.html
@@ -15,8 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,10 +38,10 @@
                 <!-- Entrées -->
                 <div class="menu entree">
                     <div class="menu__title">
-                        <h4>Entrées</h4>
+                        <h3>Entrées</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Tartare de poulpe acidulé</h3>
+                    <div class="meals delay1">
+                        <h4>Tartare de poulpe acidulé</h4>
                         <div class="last__line">
                             <p>Aux zestes d'orange</p>
                             <span class="num">25€</span>
@@ -51,8 +50,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Velouté de légumes d'antan</h3>
+                    <div class="meals delay2">
+                        <h4>Velouté de légumes d'antan</h4>
                         <div class="last__line">
                             <p>Carotte, panais, topinambour</p>
                             <span class="num">35€</span>
@@ -61,8 +60,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Soupe à l'oignon</h3>
+                    <div class="meals delay3">
+                        <h4>Soupe à l'oignon</h4>
                         <div class="last__line">
                             <p>Revisitée</p>
                             <span class="num">20€</span>
@@ -76,10 +75,10 @@
                 <!-- Plats principaux -->
                 <div class="menu plats">
                     <div class="menu__title">
-                        <h4>Plats</h4>
+                        <h3>Plats</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Coquilles Saint-Jacques</h3>
+                    <div class="meals delay1">
+                        <h4>Coquilles Saint-Jacques</h4>
                         <div class="last__line">
                             <p>Accompagnées d'une purée de panais</p>
                             <span class="num">40€</span>
@@ -88,8 +87,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Magret de canard</h3>
+                    <div class="meals delay2">
+                        <h4>Magret de canard</h4>
                         <div class="last__line">
                             <p>Et parmentier de pommes de terre</p>
                             <span class="num">35€</span>
@@ -98,8 +97,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                    <div class="meals delay3">
+                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                         <div class="last__line">
                             <p>Sur son lit de gnocchis aux légumes</p>
                             <span class="num">44€</span>
@@ -113,11 +112,11 @@
                 <!-- Desserts -->
                 <div class="menu dessert">
                     <div class="menu__title">
-                        <h4>Desserts</h4>
+                        <h3>Desserts</h3>
 
                     </div>
-                    <div class="meals">
-                        <h3>Pétales de violettes glacés</h3>
+                    <div class="meals delay1">
+                        <h4>Pétales de violettes glacés</h4>
                         <div class="last__line">
                             <p>Et purée de noisettes</p>
                             <span class="num">18€</span>
@@ -126,8 +125,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Fondant au chocolat</h3>
+                    <div class="meals delay2">
+                        <h4>Fondant au chocolat</h4>
                         <div class="last__line">
                             <p>Revisité</p>
                             <span class="num">22€</span>
@@ -136,8 +135,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Millefeuille croustillant</h3>
+                    <div class="meals delay3">
+                        <h4>Millefeuille croustillant</h4>
                         <div class="last__line">
                             <p>Myrtilles et pâte d’amande</p>
                             <span class="num">23€</span>
