--- a/public/pages/menu2.html
+++ b/public/pages/menu2.html
@@ -15,8 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,10 +38,10 @@
                 <!-- Entrées -->
                 <div class="menu entree">
                     <div class="menu__title">
-                        <h4>Entrées</h4>
+                        <h3>Entrées</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Ravioles de foie gras</h3>
+                    <div class="meals delay1">
+                        <h4>Ravioles de foie gras</h4>
                         <div class="last__line">
                             <p>Accompagnés de leur crème à la truffe</p>
                             <span class="num">25€</span>
@@ -51,8 +50,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Caviar osciètre</h3>
+                    <div class="meals delay2">
+                        <h4>Caviar osciètre</h4>
                         <div class="last__line">
                             <p>Sur blini à la farine de blé noir</p>
                             <span class="num">35€</span>
@@ -61,8 +60,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Homard et espuma de potiron</h3>
+                    <div class="meals delay3">
+                        <h4>Homard et espuma de potiron</h4>
                         <div class="last__line">
                             <p>Mariné aux zestes d'orange</p>
                             <span class="num">20€</span>
@@ -71,8 +70,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Foie gras de canard cuit entier</h3>
+                    <div class="meals delay4">
+                        <h4>Foie gras de canard cuit entier</h4>
                         <div class="last__line">
                             <p>Confiture de figue et pain toasté</p>
                             <span class="num">35€</span>
@@ -86,10 +85,10 @@
                 <!-- Plats principaux -->
                 <div class="menu plats">
                     <div class="menu__title">
-                        <h4>Plats</h4>
+                        <h3>Plats</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
+                    <div class="meals delay1">
+                        <h4>Noix de coquilles Saint-Jacques</h4>
                         <div class="last__line">
                             <p>Sur lit de purée de céleri-rave</p>
                             <span class="num">40€</span>
@@ -98,8 +97,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Langoustine poêlée</h3>
+                    <div class="meals delay2">
+                        <h4>Langoustine poêlée</h4>
                         <div class="last__line">
                             <p>Purée de patate douce</p>
                             <span class="num">35€</span>
@@ -108,8 +107,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Mijoté de queue de boeuf</h3>
+                    <div class="meals delay3">
+                        <h4>Mijoté de queue de boeuf</h4>
                         <div class="last__line">
                             <p>Et riz sauvage aux zestes de citron</p>
                             <span class="num">44€</span>
@@ -123,10 +122,10 @@
                 <!-- Desserts -->
                 <div class="menu dessert">
                     <div class="menu__title">
-                        <h4>Desserts</h4>
+                        <h3>Desserts</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Macaron noisette et chocolat</h3>
+                    <div class="meals delay1">
+                        <h4>Macaron noisette et chocolat</h4>
                         <div class="last__line">
                             <p>Glace au caramel brun et sel de Guérande</p>
                             <span class="num">18€</span>
@@ -135,8 +134,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Baba au rhum revisité</h3>
+                    <div class="meals delay2">
+                        <h4>Baba au rhum revisité</h4>
                         <div class="last__line">
                             <p>Avec son coulis de citron</p>
                             <span class="num">22€</span>
@@ -145,8 +144,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Tarte au citron meringuée</h3>
+                    <div class="meals delay3">
+                        <h4>Tarte au citron meringuée</h4>
                         <div class="last__line">
                             <p>Déstructurée</p>
                             <span class="num">23€</span>
