--- a/public/pages/menu4.html
+++ b/public/pages/menu4.html
@@ -15,8 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,10 +38,10 @@
                 <!-- Entrées -->
                 <div class="menu entree">
                     <div class="menu__title">
-                        <h4>Entrées</h4>
+                        <h3>Entrées</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Tartare de thon</h3>
+                    <div class="meals delay1">
+                        <h4>Tartare de thon</h4>
                         <div class="last__line">
                             <p>Assaisonné au yuzu</p>
                             <span class="num">25€</span>
@@ -51,8 +50,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Bouchée de homard croustillant</h3>
+                    <div class="meals delay2">
+                        <h4>Bouchée de homard croustillant</h4>
                         <div class="last__line">
                             <p>Et sa farandole de petits légumes</p>
                             <span class="num">35€</span>
@@ -61,8 +60,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Velouté de cèpes</h3>
+                    <div class="meals delay3">
+                        <h4>Velouté de cèpes</h4>
                         <div class="last__line">
                             <p>Aux truffes</p>
                             <span class="num">20€</span>
@@ -76,10 +75,10 @@
                 <!-- Plats principaux -->
                 <div class="menu plats">
                     <div class="menu__title">
-                        <h4>Plats</h4>
+                        <h3>Plats</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Poulet rôti aux herbes de Provence</h3>
+                    <div class="meals delay1">
+                        <h4>Poulet rôti aux herbes de Provence</h4>
                         <div class="last__line">
                             <p>Et sa crème de truffe</p>
                             <span class="num">40€</span>
@@ -88,8 +87,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Langouste rôtie</h3>
+                    <div class="meals delay2">
+                        <h4>Langouste rôtie</h4>
                         <div class="last__line">
                             <p>Et ses légumes de saison</p>
                             <span class="num">35€</span>
@@ -98,8 +97,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Côte de boeuf Angus</h3>
+                    <div class="meals delay3">
+                        <h4>Côte de boeuf Angus</h4>
                         <div class="last__line">
                             <p>Et sa purée de panais</p>
                             <span class="num">44€</span>
@@ -113,10 +112,10 @@
                 <!-- Desserts -->
                 <div class="menu dessert">
                     <div class="menu__title">
-                        <h4>Desserts</h4>
+                        <h3>Desserts</h3>
                     </div>
-                    <div class="meals">
-                        <h3>Farandole de desserts</h3>
+                    <div class="meals delay1">
+                        <h4>Farandole de desserts</h4>
                         <div class="last__line">
                             <p>Du chef</p>
                             <span class="num">18€</span>
@@ -125,8 +124,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Crème brulée</h3>
+                    <div class="meals delay2">
+                        <h4>Crème brulée</h4>
                         <div class="last__line">
                             <p>Revisitée</p>
                             <span class="num">22€</span>
@@ -135,8 +134,8 @@
                             <span><i class="fas fa-check-circle fa-2x"></i></span>
                         </div>
                     </div>
-                    <div class="meals">
-                        <h3>Tiramisu</h3>
+                    <div class="meals delay3">
+                        <h4>Tiramisu</h4>
                         <div class="last__line">
                             <p>À la noisette</p>
                             <span class="num">23€</span>
